# arche-browser

./: README.md  arche_browser.py  pyproject.toml
arche_browser/: __init__.py  __main__.py  auth.py  browser.py  chrome.py  collector.py  context.py  devtools.py  history.py  local.py  response.py  server.py  snapshot.py  tools.py  trace.py  utils.py  wait.py
arche_browser/sites/: __init__.py  chatgpt.py
tests/: test_control.py  test_mcp_client.py  test_remote.py
